# STRIX-Web

./: .gitignore  Cursor_AI_从0开发_STRIX_Web_执行文档.md  README.md
backend/: .env.example  fake_strix.py  pyproject.toml
backend/alembic/: __init__.py  env.py
backend/alembic/versions/: 001_initial.py
backend/app/: __init__.py  main.py
backend/app/api/: auth_deps.py  deps.py
backend/app/api/routes/: audit_logs.py  auth.py  dashboard.py  health.py  results.py  runs.py  tasks.py  users.py  websockets.py  whitelists.py
backend/app/core/: config.py  enums.py  errors.py  logging.py  security.py
backend/app/db/: base.py  seed.py  session.py
backend/app/infra/: event_bus.py  lock.py
backend/app/models/: __init__.py  artifact.py  audit_log.py  result.py  run_event.py  task.py  task_run.py  user.py  vulnerability.py  whitelist.py
backend/app/schemas/: auth.py  common.py  result.py  system.py  task.py  task_run.py  websocket.py
backend/app/services/: audit_service.py  auth_service.py  dashboard_service.py  run_service.py  task_service.py  user_service.py  whitelist_service.py
backend/app/strix/: __init__.py  command_builder.py  event_tailer.py  process_registry.py  result_parser.py  runner.py
backend/app/tests/: test_models.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.ts
frontend/src/api/: auth.ts  dashboard.ts  http.ts  results.ts  runs.ts  system.ts  tasks.ts  types.ts  websocket.ts
frontend/src/layouts/: AdminLayout.vue
frontend/src/pages/: 403.vue  Dashboard.vue  Login.vue
frontend/src/router/: index.ts
(+10 files in other folders)
